...
            }
        }
    }

    LaunchedEffect(responseData) {
        if (responseData is ResponseData.Error){
            error = responseData.message
        }
    }

    LaunchedEffect(resendOTPResponse) {
        when (resendOTPResponse) {
            is ResponseData.Error -> {
                error = resendOTPResponse.message
            }
            is ResponseData.Success -> {
                resendOTPResponse.data?.let {
                    eid = it
                } ?: run {
                    error = "Failed to send OTP"
                    resetOTP()
                }
            }
            else -> { /* NoResponse or other states */ }
        }
    }
...
